	the xml module always returned string().

	* src/server/exmpp_server_sasl.erl: Document that mechanism names are
	accepted as binary() and will be returned as binary().

	* src/network/exmpp_session.erl: Replace exmpp_xml:get_attribute*/3
	calls by exmpp_xml:get_attribute*_as_list/3 to be sure nothing was
	broken by the API changes.

2009-01-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp_xmpp.hrl, include/internal/exmpp_xmpp.hrl,
	include/internal/Makefile.am: Definition of #jid is moved to an
	internal header.

	* src/core/exmpp_jid.erl: Include internal/exmpp_xml.hrl.

2009-01-14  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stringprep.erl (control_reuse_arg/2): Treat errors
	from control/2 as the first case; this was a regression introduced in
	revision r692.

	* src/core/exmpp_stanza.erl, src/core/exmpp_message.erl: Style.

	* src/core/exmpp_xml.erl: The old attribute tuple requires that the
	value is a string(), not a binary(). Therefore the get_attribute*
	functions family changes:
	  o  get_attribute_from_list/3 and get_attribute/3 will return a
	     string() with an old-format attribute and a binary() otherwise.
	  o  get_attribute_from_list/4 and get_attribute/4 don't change
	     because they only work on the new format.
	  o  get_attribute_from_list_as_list/{3,4} and
	     get_attribute_as_list/{3,4} will always return a string().
	  o  get_attribute_from_list_as_binary/{3,4} and
	     get_attribute_as_binary/{3,4} will always return a binary().

	* src/core/exmpp_jid.erl: When parsing a JID, the caller doesn't have
	to care if it's a binary() or a string(). Thus, the parsing API is
	changed to provide a single entry point:
	  o  parse_jid/1 accepts both binary() and string() input.
	  o  list_to_jid/1 and binary_to_jid/1 are removed.
	At the same time, simplify exception thrown.  Remove support for bare
	JID parsing. Remove make_bare_jid/{1,2} because make_jid/{1,2} provide
	the same thing.
